--- a/pMEC1138.ipynb
+++ b/pMEC1138.ipynb
@@ -71,18 +71,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "from pMEC1135 import cas1, cas2, cas3, p409"
+    "from pMEC1135 import cas1, cas2, cas3, p4, p409"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -144,7 +144,7 @@
        "qSJ95NM815X60yBy4l6iI69a_Dw"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -197,7 +197,7 @@
        " Amplicon(2906))"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -238,7 +238,7 @@
        "Linear products..................: [23607] [23563] [23306] [23238] [23233] [23190] [23151] [22692] [22655] [22241] [22197] [21940] [21872] [21867] [21824] [21785] [21725] [21514] [21430] [21326] [21289] [20972] [20719] [20479] [20397] [20359] [20345] [20246] [20148] [20064] [19606] [19353] [19113] [19096] [19031] [18995] [18979] [18880] [18542] [18430] [18348] [17730] [17629] [17605] [17514] [17176] [17072] [17064] [16982] [16818] [16208] [15911] [15829] [15706] [15556] [15452] [15352] [14842] [14762] [14760] [14663] [14545] [14484] [14463] [13986] [13734] [13652] [13476] [13396] [13297] [13118] [13042] [13037] [12943] [12711] [12368] [12286] [12110] [11931] [11676] [11577] [11400] [11318] [11166] [11067] [10860] [10588] [10211] [10192] [10034] [9952] [9800] [9701] [9222] [9177] [8864] [8526] [8335] [8278] [8179] [8015] [7498] [7457] [7128] [6912] [6813] [6554] [6455] [5780] [5698] [5581] [5447] [5408] [5188] [5089] [4609] [4414] [4332] [3470] [3388] [3371] [2104] [1923] [1013] [969] [712] [644] [639] [596] [557] [98] [61]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -260,18 +260,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       " -|pYKP0|98\n",
+       "|        \\/\n",
+       "|        /\\\n",
+       "|        98|2432bp_PCR_prod|712\n",
+       "|                           \\/\n",
+       "|                           /\\\n",
+       "|                           712|2889bp_PCR_prod|1013\n",
+       "|                                               \\/\n",
+       "|                                               /\\\n",
+       "|                                               1013|3532bp_PCR_prod|644\n",
+       "|                                                                    \\/\n",
+       "|                                                                    /\\\n",
+       "|                                                                    644|2693bp_PCR_prod|969\n",
+       "|                                                                                        \\/\n",
+       "|                                                                                        /\\\n",
+       "|                                                                                        969|3723bp_PCR_prod|639\n",
+       "|                                                                                                            \\/\n",
+       "|                                                                                                            /\\\n",
+       "|                                                                                                            639|2005bp_PCR_prod|557\n",
+       "|                                                                                                                                \\/\n",
+       "|                                                                                                                                /\\\n",
+       "|                                                                                                                                557|2022bp_PCR_prod|596\n",
+       "|                                                                                                                                                    \\/\n",
+       "|                                                                                                                                                    /\\\n",
+       "|                                                                                                                                                    596|2906bp_PCR_prod|61\n",
+       "|                                                                                                                                                                        \\/\n",
+       "|                                                                                                                                                                        /\\\n",
+       "|                                                                                                                                                                        61-\n",
+       "|                                                                                                                                                                           |\n",
+       " ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "candidate.small_fig()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -282,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -293,7 +333,7 @@
        "22594"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -312,10 +352,10 @@
     {
      "data": {
       "text/plain": [
-       "iy47I_X3O5lQr_JPkGfFqiYYnZI"
+       "tWtIxyv-o0uXDkfaXxdPoFbkWco"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -334,10 +374,10 @@
     {
      "data": {
       "text/plain": [
-       "cSEGUID_iy47I_X3O5lQr_JPkGfFqiYYnZI_2015-05-11T09:12:07.191236"
+       "cSEGUID_tWtIxyv-o0uXDkfaXxdPoFbkWco_2015-05-12T13:41:00.081226"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -358,10 +398,10 @@
     {
      "data": {
       "text/plain": [
-       "'pYPK0_TEF1tp_XR_N272D_TPI1tp_XDH_PDC1tp_XK_FBA1tp_TAL1_PDC1tpPDC1tp_ScTKL1_RPS19btp_ScRPE1_RPS19atp_ScRKI1_TPI1tp_CiGXF1_ENO2tp (alternative name pYPK0_8) cSEGUID_iy47I_X3O5lQr_JPkGfFqiYYnZI_2015-05-11T09:12:07.191236'"
+       "'pYPK0_TEF1tp_XR_N272D_TPI1tp_XDH_PDC1tp_XK_FBA1tp_TAL1_PDC1tpPDC1tp_ScTKL1_RPS19btp_ScRPE1_RPS19atp_ScRKI1_TPI1tp_CiGXF1_ENO2tp (alternative name pYPK0_8) cSEGUID_tWtIxyv-o0uXDkfaXxdPoFbkWco_2015-05-12T13:41:00.081226'"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,30 +412,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sequence change\n",
-      "pMEC1138_OLD.gb 22614 bp seguid Psy1VAoFvzZ8l6ePjR836NX6d78\n",
-      "pMEC1138.gb 22594 bp seguid rctDgebDoox992JFcEGJV61c6Rk\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/bjorn/anaconda/envs/bjorn/lib/python2.7/site-packages/Bio/SeqIO/InsdcIO.py:438: BiopythonWarning: Annotation 'pYPK0_TEF1tp_XR_N272D_TPI1tp_XDH_PDC1tp_XK_FBA1tp_TAL1_PDC1tpPDC1tp_ScTKL1_RPS19btp_ScRPE1_RPS19atp_ScRKI1_TPI1tp_CiGXF1_ENO2tp' too long for '' line\n",
-      "  BiopythonWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pw.write(\"pMEC1138.gb\")"
    ]
@@ -411,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -422,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -430,10 +451,10 @@
     {
      "data": {
       "text/plain": [
-       "iy47I_X3O5lQr_JPkGfFqiYYnZI"
+       "tWtIxyv-o0uXDkfaXxdPoFbkWco"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -452,10 +473,10 @@
     {
      "data": {
       "text/plain": [
-       "' pYPK0_TEF1tp_XR_N272D_TPI1tp_XDH_PDC1tp_XK_FBA1tp_TAL1_PDC1tpPDC1tp_ScTKL1_RPS19btp_ScRPE1_RPS19atp_ScRKI1_TPI1tp_CiGXF1_ENO2tp (alternative name pYPK0_8) cSEGUID_iy47I_X3O5lQr_JPkGfFqiYYnZI_2015-05-11T09:12:07.191236'"
+       "' pYPK0_TEF1tp_XR_N272D_TPI1tp_XDH_PDC1tp_XK_FBA1tp_TAL1_PDC1tpPDC1tp_ScTKL1_RPS19btp_ScRPE1_RPS19atp_ScRKI1_TPI1tp_CiGXF1_ENO2tp (alternative name pYPK0_8) cSEGUID_tWtIxyv-o0uXDkfaXxdPoFbkWco_2015-05-12T13:41:00.081226'"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -477,7 +498,7 @@
        "22594"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
