--- a/pMEC1136.ipynb
+++ b/pMEC1136.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -80,7 +80,7 @@
        "qSJ95NM815X60yBy4l6iI69a_Dw"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -186,7 +186,7 @@
        " Amplicon(2754))"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -227,7 +227,7 @@
        "Linear products..................: [15773] [15472] [15404] [14858] [14821] [13596] [13138] [12885] [12711] [11262] [10708] [10192] [9238] [8374] [8015] [7518] [7128] [5642] [5408] [4609] [1013] [712] [644] [98] [61]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -277,7 +277,7 @@
        " -------------------------------------------------------------------------------------------"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -317,7 +317,7 @@
        "vjorydf8wV9TuwIkIydwg5qFSHw"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -337,29 +337,29 @@
     {
      "data": {
       "text/plain": [
-       "cSEGUID_vjorydf8wV9TuwIkIydwg5qFSHw_2015-05-09T16:23:48.039819"
+       "cSEGUID_vjorydf8wV9TuwIkIydwg5qFSHw_2015-05-12T13:53:02.277752"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pw.id = \"pYPK0_Df\"\n",
-    "pw.description=\"pYPK0-ScTEF1-XR-ScTDH3-XDH-ScPGI1-XK-ScFBA1-TAL1-ScPDC1\"\n",
+    "pw.id = \"pMEC1136\"\n",
+    "pw.description=\"pYPK0-ScTEF1-XR-ScTDH3-XDH-ScPGI1-XK-ScFBA1-TAL1-ScPDC1 (alt name pYPK0_Df)\"\n",
     "pw.stamp()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "pw.write(\"pYPK0_Df.gb\")"
+    "pw.write(\"pMEC1136.gb\")"
    ]
   },
   {
@@ -368,23 +368,23 @@
    "source": [
     "## Download\n",
     "\n",
-    "[pYPK0_Df](pYPK0_Df.gb)"
+    "[pMEC1136](pMEC1136.gb)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "reloaded = pydna.read(\"pYPK0_Df.gb\")"
+    "reloaded = pydna.read(\"pMEC1136.gb\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -395,7 +395,7 @@
        "vjorydf8wV9TuwIkIydwg5qFSHw"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -417,7 +417,7 @@
        "'pYPK0-ScTEF1-XR-ScTDH3-XDH-ScPGI1-XK-ScFBA1-TAL1-ScPDC1 cSEGUID_vjorydf8wV9TuwIkIydwg5qFSHw_2015-05-09T16:23:48.039819'"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
