--- a/pMEC1135.ipynb
+++ b/pMEC1135.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# pMEC1135\n",
     "\n",
-    "This vector is identical to [pMEC1136](pMEC1136.ipynb) but for a point mutation in XYL1 N272D. The systematic name of this vector is : ```pYPK0-TEF1-SsXR_N272D-TDH3-SsXDH-PGI1-XK-FBA1-ScTAL1-PDC1```\n",
+    "Also referred to as pYPK0-C4. This vector is identical to [pMEC1136](pMEC1136.ipynb) but for a point mutation in XYL1 N272D. The systematic name of this vector is : \n",
+    "\n",
+    "    pYPK0-TEF1-SsXR_N272D-TDH3-SsXDH-PGI1-XK-FBA1-ScTAL1-PDC1\n",
     "\n",
     "This vector expresses four genes and was assembled from four single gene expression cassettes:\n",
     "\n",
