--- a/pYPKpw.ipynb
+++ b/pYPKpw.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -144,7 +144,7 @@
        "WeyovdMmqwA4bc9EqEwUDmbo3Lg"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -166,19 +166,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
     "The pYPKpw can be linearized with EcoRV, FspAI or ZraI."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -189,7 +187,7 @@
        "(Dseqrecord(-5603), Dseqrecord(-5603), Dseqrecord(-5603))"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -220,7 +218,7 @@
        "CTGCAGTACGCGTACTATAG"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -253,10 +251,10 @@
     {
      "data": {
       "text/plain": [
-       "cSEGUID_WeyovdMmqwA4bc9EqEwUDmbo3Lg_2015-05-09T10:30:58.803112"
+       "cSEGUID_WeyovdMmqwA4bc9EqEwUDmbo3Lg_2015-05-16T06:18:13.906429"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +265,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pYPKpw.locus=\"pYPKpw\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -283,6 +292,30 @@
     "## Download\n",
     "\n",
     "[pYPKpw](pYPKpw.gb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "cSEGUID_WeyovdMmqwA4bc9EqEwUDmbo3Lg"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pydna\n",
+    "reloaded=pydna.read(\"pYPKpw.gb\")\n",
+    "reloaded.verify_stamp()"
    ]
   },
   {
