--- a/index.ipynb
+++ b/index.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "This is an [IPython notebook (ipynb)](http://ipython.org/notebook.html) file. An ipynb file is a mixture between [Python](https://www.python.org/) source code and documentation. This file links to other ipynb files which describe in detail every genetic construction made as a part of this work using the software package [pydna](http://www.biomedcentral.com/1471-2105/16/142/abstract). \n",
     "\n",
-    "Since pydna in used, the documentation is executable on the users computer if downloaded. To execute the IPython notebooks, Python and [pydna](https://pypi.python.org/pypi/pydna/) must be installed. The simples way to install Python on any computer is to install a free Python distribution for Scientific computing, such as [Anaconda](https://store.continuum.io/cshop/anaconda/).\n",
+    "Since pydna in used, the documentation is executable on the users computer if downloaded. To execute the IPython notebooks, Python and [pydna](https://pypi.python.org/pypi/pydna/) must be installed. The simplest way to install Python on any computer is to install a free Python distribution for Scientific computing, such as [Anaconda](https://store.continuum.io/cshop/anaconda/). Standard primers and additional information [ypk_std_primers](ypk_std_primers.ipynb).\n",
     "\n"
    ]
   },
@@ -107,15 +107,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Miscellaneous vectors\n",
+    "## Pathway backbone vectors\n",
     "\n",
-    "\n",
-    "| Vector   | Short description                         | Genbank                | Notebooks                  |\n",
-    "|----------|-------------------------------------------|------------------------|----------------------------|\n",
-    "| pYPKa    | pCAPs with a unique AjiI site             | [genbank](pYPKa.gb)    | [notebook](pYPKa.ipynb)    |\n",
-    "| pMEC1030 | pSU0 lacking a the EcoRV site             | [genbank](pMEC1030.gb) | [notebook](pMEC1030.ipynb) |\n",
-    "| pYPK0    | Yeast version of pCAPs                    | [genbank](pYPK0.gb)    | [notebook](pYPK0.ipynb)    |\n",
-    "| pYPKpw   | A version of pYPK0 with a deletion in crp | [genbank](pYPKpw.gb)   | [notebook](pYPKpw.ipynb)   |"
+    "| Vector   | Short description                         | Genbank                | Notebooks                 |\n",
+    "|----------|-------------------------------------------|------------------------|---------------------------|\n",
+    "| pYPK0    | Yeast version of pCAPs                    | [genbank](pYPK0.gb)    | [notebook](pYPK0.ipynb)   |\n",
+    "| pYPKpw   | A version of pYPK0 with a deletion in crp | [genbank](pYPKpw.gb)   | [notebook](pYPKpw.ipynb)  |\n",
+    "| pYPK1\t   | [bleMX4](http://www.ncbi.nlm.nih.gov/pubmed/10514571), CEN6/ARS4                         | [genbank](pYPK1.gb)\t| [notebook](pYPK1.ipynb)\t|\n",
+    "| pYPK2    | [kanMX4](http://www.ncbi.nlm.nih.gov/pubmed/7747518), CEN6/ARS4                         | [genbank](pYPK2.gb)\t| [notebook](pYPK2.ipynb)\t|\n",
+    "| pYPK3\t   | [hphMX4](http://www.ncbi.nlm.nih.gov/pubmed/10514571), CEN6/ARS4                         | [genbank](pYPK3.gb)\t| [notebook](pYPK3.ipynb)\t|\n",
+    "| pYPK4\t   | [hphMX4](http://www.ncbi.nlm.nih.gov/pubmed/10514571), 2μ                                | [genbank](pYPK4.gb)\t| [notebook](pYPK4.ipynb)\t|\n",
+    "| pYPK7\t   | [kanMX4](http://www.ncbi.nlm.nih.gov/pubmed/7747518), 2µ                                | [genbank](pYPK7.gb)\t| [notebook](pYPK7.ipynb)\t|\n",
+    "| pYPKp3   | A version of pYPK3 with a deletion in crp | [genbank](pYPKp3.gb)\t| [notebook](pYPKp3.ipynb)  |\n",
+    "| pYPKp4   | A version of pYPK4 with a deletion in crp | [genbank](pYPKp4.gb)\t| [notebook](pYPKp4.ipynb)  |\n",
+    "| pYPKp7   | A version of pYPK7 with a deletion in crp | [genbank](pYPKp7.gb)\t| [notebook](pYPKp7.ipynb)\t| "
    ]
   },
   {
@@ -147,13 +152,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Miscellaneous vectors\n",
+    "\n",
+    "\n",
+    "| Vector   | Short description                         | Genbank                | Notebooks                  |\n",
+    "|----------|-------------------------------------------|------------------------|----------------------------|\n",
+    "| pYPKa    | pCAPs with a unique AjiI site             | [genbank](pYPKa.gb)    | [notebook](pYPKa.ipynb)    |\n",
+    "| pMEC1030 | pSU0 lacking a the EcoRV site             | [genbank](pMEC1030.gb) | [notebook](pMEC1030.ipynb) |\n",
+    "| pMEC1042 | pSU0 lacking a the EcoRV site             | [genbank](pMEC1042.gb) | [notebook](pMEC1042.ipynb) |\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
