--- a/pYPK0.ipynb
+++ b/pYPK0.ipynb
@@ -5,20 +5,21 @@
    "metadata": {},
    "source": [
     "# Construction of the pYPK0 vector\n",
-    "The pYPK0 is a yeast / E. coli shuttle vector version of the pCAPs vector that was made through in-vivo homologous recombination with [pMEC1030](pMEC1030.ipynb). The pCAPs vector is described in detail in the notebook describing the [pYPKa](pYPKa.ipynb) vector.\n",
+    "The pYPK0 is a yeast / _E. coli_ shuttle vector version of the pCAPs vector that was made through in-vivo homologous recombination between [pCAPs](http://www.ncbi.nlm.nih.gov/nuccore/AJ001614.1) and [pMEC1030](pMEC1030.ipynb). The pCAPs vector is described in detail in the notebook describing the [pYPKa](pYPKa.ipynb) vector.\n",
     "\n",
     "Important features are:\n",
-    "* unique [ZraI](http://rebase.neb.com/rebase/enz/ZraI.html) site\n",
-    "* unique [EcoRV](http://rebase.neb.com/rebase/enz/EcoRV.html) site\n",
-    "* [URA3 marker](http://www.yeastgenome.org/locus/S000000747/overview)\n",
+    "* A unique [ZraI](http://rebase.neb.com/rebase/enz/ZraI.html) site\n",
+    "* A unique [EcoRV](http://rebase.neb.com/rebase/enz/EcoRV.html) site\n",
+    "* A [URA3 marker](http://www.yeastgenome.org/locus/S000000747/overview) for selection in _S. cerevisiae_\n",
+    "* The 2µ sequence for replication in _S. cerevisiae_\n",
     "\n",
-    "The pYPK0 is mainly used as a backbone for the tp_gene_tp cassettes (single gene cassettes).\n",
+    "The pYPK0 is mainly used as a backbone for the tp_gene_tp cassettes (single gene cassettes) and multi gene pathways. The [pYPKpw](pYPKpw.ipynb) vector was constructed from the pYPK0.\n",
     "\n",
-    "The strategy used to combine the pMEC1030 and pCAPs vectors into a yeas shuttle vector were described by [Iizasa & Nagano 2006](http://www.biotechniques.com/BiotechniquesJournal/2006/January/Highly-efficient-yeast-based-in-vivo-DNA-cloning-of-multiple-DNA-fragments-and-the-simultaneous-construction-of-yeast-Escherichia-coli-shuttle-vectors/biotechniques-45641.html?pageNum=1).\n",
+    "The strategy used to combine the pMEC1030 and pCAPs vectors into a yeast shuttle vector were described by [Iizasa & Nagano 2006](http://www.biotechniques.com/BiotechniquesJournal/2006/January/Highly-efficient-yeast-based-in-vivo-DNA-cloning-of-multiple-DNA-fragments-and-the-simultaneous-construction-of-yeast-Escherichia-coli-shuttle-vectors/biotechniques-45641.html?pageNum=1).\n",
     "\n",
     "![using pSU0](using_pSU0.jpg \"This figure is from the paper above\")\n",
     "\n",
-    "Briefly, the pMEC1030 vector is digested with BamHI and EcoRI removing a small stuffer fragment. The target vector is digested in the ampicillin marker gene (using PstI in the figure). The linear vectors recombine between the amp marker and the pUC origin of replication."
+    "Briefly, the pMEC1030 vector (pSU0 in the figure above) was digested with BamHI and EcoRI removing a small stuffer fragment. The pCAPs (pBR322 derived vector in the figure above) was digested in the ampicillin marker gene using PvuI (instead of PstI in the figure above). The linear vectors recombine between the ampicillin marker and the pUC origin of replication."
    ]
   },
   {
@@ -41,20 +42,19 @@
    },
    "outputs": [],
    "source": [
-    "pMEC1030=pydna.read(\"pMEC1030.gb\")"
+    "pMEC1030 = pydna.read(\"pMEC1030.gb\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "pMEC1030 (4398 bp)should have cseguid \n",
-    "```bg67Zek8TFW0rvcIs6-d4X6cV_w```"
+    "pMEC1030 (4398 bp)should have cseguid ```bg67Zek8TFW0rvcIs6-d4X6cV_w```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -63,23 +63,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4398\n"
+      "The pMEC1030 is 4398 bp long\n",
+      "The cSEGUID checksum is  bg67Zek8TFW0rvcIs6-d4X6cV_w\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "bg67Zek8TFW0rvcIs6-d4X6cV_w"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print len(pMEC1030)\n",
-    "pMEC1030.cseguid()"
+    "print \"The pMEC1030 is\", len(pMEC1030), \"bp long\"\n",
+    "print \"The cSEGUID checksum is \", pMEC1030.cseguid()"
    ]
   },
   {
